# gitoxide

./: .gitignore  CLAUDE.md  Cargo.toml  async-support.md  conftest.py  extraction-guide.md  fsck-support.md  main.py  pyproject.toml
dev_docs/: Async.md  README.md  documentation-plan.md  gitoxide-analysis-tools.md  index.md  python_api_design.md  python_bindings.md  python_bindings_implementation_order.md  python_bindings_repo_methods_checklist.md  template.md
dev_docs/gitoxide-core/: index.md
dev_docs/gix/: index.md
dev_docs/gix-actor/: index.md  use_cases.md
dev_docs/gix-archive/: index.md  use_cases.md
dev_docs/gix-attributes/: index.md  use_cases.md
dev_docs/gix-bitmap/: index.md  use_cases.md
dev_docs/gix-blame/: git-blame-analysis.md  index.md  pitfalls.md  reference.md  roadmap.md  use_cases.md
dev_docs/gix-chunk/: index.md  use_cases.md
dev_docs/gix-command/: index.md  use_cases.md
dev_docs/gix-commitgraph/: index.md  use_cases.md
dev_docs/gix-config/: index.md  use_cases.md
dev_docs/gix-config-value/: index.md  use_cases.md
dev_docs/gix-credentials/: index.md  use_cases.md
dev_docs/gix-date/: index.md  use_cases.md
dev_docs/gix-diff/: index.md  use_cases.md
dev_docs/gix-dir/: index.md  use_cases.md
dev_docs/gix-discover/: index.md  use_cases.md
dev_docs/gix-features/: index.md  use_cases.md
dev_docs/gix-fetchhead/: index.md  use_cases.md
dev_docs/gix-filter/: index.md  use_cases.md
dev_docs/gix-fs/: index.md  use_cases.md
dev_docs/gix-fsck/: index.md  use_cases.md
dev_docs/gix-glob/: index.md  use_cases.md
dev_docs/gix-hash/: index.md
dev_docs/gix-hashtable/: index.md  usage.md  use_cases.md
dev_docs/gix-ignore/: index.md  use_cases.md
dev_docs/gix-index/: index.md  use_cases.md
dev_docs/gix-lfs/: index.md  use_cases.md
dev_docs/gix-lock/: index.md  use_cases.md
dev_docs/gix-macros/: index.md
dev_docs/gix-mailmap/: index.md  use_cases.md
dev_docs/gix-merge/: index.md  use_cases.md
dev_docs/gix-negotiate/: index.md  use_cases.md
dev_docs/gix-note/: index.md  use_cases.md
dev_docs/gix-object/: index.md  use_cases.md
dev_docs/gix-odb/: index.md  use_cases.md
dev_docs/gix-pack/: index.md  use_cases.md
dev_docs/gix-packetline/: index.md  use_cases.md
dev_docs/gix-packetline-blocking/: index.md  use_cases.md
dev_docs/gix-path/: index.md  use_cases.md
dev_docs/gix-pathspec/: index.md  use_cases.md
dev_docs/gix-prompt/: index.md  use_cases.md
dev_docs/gix-protocol/: index.md  use_cases.md
dev_docs/gix-quote/: index.md  use_cases.md
dev_docs/gix-rebase/: index.md  use_cases.md
dev_docs/gix-ref/: index.md  use_cases.md
dev_docs/gix-refspec/: index.md  use_cases.md
dev_docs/gix-revision/: index.md  use_cases.md
dev_docs/gix-revwalk/: implementation-comparison.md  index.md  use_cases.md
dev_docs/gix-sec/: index.md
dev_docs/gix-sequencer/: index.md  use_cases.md
dev_docs/gix-shallow/: index.md  use_cases.md
dev_docs/gix-status/: index.md  use_cases.md
dev_docs/gix-tempfile/: index.md  use_cases.md
python/: API.md  Cargo.toml  README.md  TODO.md  build_all.sh  pyproject.toml  pyproject.toml.bak2  pytest.ini  setup_stubs.py
python/docs/: index.md
python/docs/bugs/: configuration.md
python/docs/config/: index.md
python/docs/history/: index.md  merge_base.md  revision.md
python/docs/repository/: config.md  index.md  properties.md  shallow.md
python/examples/: README.md  async_repository.py  async_wrapper.py  basic_usage.py  config_example.py  git_config_explorer.py  inspect_module.py  repository_info.py  repository_objects.py  repository_test.py  simple_async_test.py  test_async.py  test_direct_async.py  test_errors.py  typed_example.py  typed_stub_demo.py  verify_methods.py
python/gitoxide/: __init__.py
python/gitoxide/asyncio/: __init__.py
python/gitoxide/common/: __init__.py
python/gitoxide/sync/: __init__.py
python/src/: asyncio.rs  config.rs  errors.rs  lib.rs  repository.rs
python/src/async_api/: mod.rs  repository.rs
python/src/repository/: core.rs  mod.rs  objects.rs  references.rs  revisions.rs
python/src/repository/config/: core.rs  mod.rs
python/stubs/: README.md
python/stubs/gitoxide/: __init__.pyi  asyncio.pyi  errors.pyi  repository.pyi
python/tests/: conftest.py  test_async_repository.py  test_config.py  test_object_operations.py  test_object_operations.py.new  test_reference_operations.py  test_repository.py  test_shallow_operations.py
(+17 files in other folders)
