[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gitoxide"
version = "0.1.0"
authors = [
    {name = "Gitoxide Contributors"},
]
description = "Python bindings for gitoxide, a fast implementation of Git"
readme = "python/README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pip>=25.0.1",
    "pytest>=8.3.5",
]

[project.urls]
"Homepage" = "https://github.com/Byron/gitoxide"
"Bug Tracker" = "https://github.com/Byron/gitoxide/issues"
"Documentation" = "https://github.com/Byron/gitoxide/tree/main/python"

[tool.maturin]
module-name = "gitoxide"
manifest-path = "python/Cargo.toml"
features = ["sync"]
package-type = ["cdylib"]
strip = true
include = ["python/stubs/gitoxide/**/*"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = ["asyncio: mark a test as an asyncio coroutine test"]
# Exclude any Rust project tests
norecursedirs = ["../target", "../*/tests", "*/tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
